Fix overflow for leaderboard at tablet breakpoints

--- a/static/src/stylesheets/module/crosswords/_layout.scss
+++ b/static/src/stylesheets/module/crosswords/_layout.scss
@@ -62,9 +62,15 @@
 }
 
 .crossword-banner {
+    clear: both;
     margin-top: $gs-baseline;
     // 90px is the height of a leaderboard
     height: 90px + $mpu-ad-label-height + $gs-row-height / 2;
+
+    @include mq($until: desktop) {
+        margin-left: -$gs-gutter;
+        margin-right: -$gs-gutter;
+    }
 }
 
 .crossword__controls {
